test/libsolidity/syntaxTests/nameAndTypeResolution/076_fallback_function_in_library.sol
library C {
    fallback() external {}
}
// ----
// TypeError 5982: (16-38='fallback() external {}'): Libraries cannot have fallback functions.
